--- a/src/pages/PaineisPage/Login.css
+++ b/src/pages/PaineisPage/Login.css
@@ -26,12 +26,15 @@
 /* Container Principal (O Fundo do Cabeçalho) */
 .page-header-with-image {
   width: 100%;
-  height: 180px;
+  height: 140px;
   padding: 0;
   margin: 0;
   
-  /* Background image que preenche todo o espaço */
-  background-size: cover;
+  /* Cor de fundo que combina com a imagem (azul dos feixes de luz) */
+  background-color: #1a365d;
+  
+  /* Background image que preserva toda a imagem */
+  background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
   
@@ -52,6 +55,7 @@
 
 /* Tema escuro */
 [data-theme="dark"] .page-header-with-image {
+  background-color: #0d1b2a;
   border-bottom: 1px solid #2d3748;
 }
 
