--- a/src/pages/PaineisPage/Login.css
+++ b/src/pages/PaineisPage/Login.css
@@ -30,8 +30,8 @@
   padding: 0;
   margin: 0;
   
-  /* Background image que preenche 100% do espaço */
-  background-size: 100% 100%;
+  /* Background image que preenche preservando proporções */
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   
